protocol-config/src/snapshots/protocol_config__snapshot_tests__attr_map_version_3.snap
---
source: protocol-config/src/lib.rs
expression: config.attr_map()
---
base_fee:
  u64: 1000
buffer_stake_for_protocol_upgrade_bps:
  u64: 5000
consensus_bad_nodes_stake_threshold:
  u64: 30
consensus_commit_rate_estimation_window_size:
  u32: 10
consensus_gc_depth:
  u32: 60
consensus_max_num_transactions_in_block:
  u64: 512
consensus_max_transaction_size_bytes:
  u64: 262144
consensus_max_transactions_in_block_bytes:
  u64: 524288
epoch_duration_ms:
  u64: 86400000
execution_version:
  u64: 2
fee_adjustment_rate_bps:
  u64: 1250
initial_value_fee_bps:
  u64: 10
max_checkpoint_size_bytes:
  u64: 31457280
max_submission_data_size:
  u64: 1048576
max_transactions_per_checkpoint:
  u64: 20000
max_value_fee_bps:
  u64: 50
min_checkpoint_interval_ms:
  u64: 200
min_value_fee_bps:
  u64: 1
model_architecture_version:
  u64: 1
model_min_stake:
  u64: 1000000000
model_reveal_slash_rate_bps:
  u64: 5000
model_tally_slash_rate_bps:
  u64: 9500
mysticeti_num_leaders_per_round:
  usize: 1
reward_slashing_rate_bps:
  u64: 5000
submission_bond_per_byte:
  u64: 65
target_claimer_incentive_bps:
  u64: 50
target_difficulty_adjustment_rate_bps:
  u64: 200
target_embedding_dim:
  u64: 2048
target_epoch_fee_collection:
  u64: 1000000000
target_hits_ema_decay_bps:
  u64: 9000
target_hits_per_epoch:
  u64: 86400
target_initial_distance_threshold:
  BcsF32: 0.978
target_initial_targets_per_epoch:
  u64: 20
target_max_distance_threshold:
  BcsF32: 2
target_min_distance_threshold:
  BcsF32: 0.95
target_model_reward_share_bps:
  u64: 4975
target_models_per_target:
  u64: 3
target_reward_allocation_bps:
  u64: 8000
target_submitter_reward_share_bps:
  u64: 4975
validator_reward_allocation_bps:
  u64: 7000
write_object_fee:
  u64: 300
