protocol-config/src/snapshots/protocol_config__snapshot_tests__attr_map_version_5.snap
---
source: protocol-config/src/lib.rs
expression: config.attr_map()
---
buffer_stake_for_protocol_upgrade_bps:
  u64: 5000
consensus_bad_nodes_stake_threshold:
  u64: 30
consensus_commit_rate_estimation_window_size:
  u32: 10
consensus_gc_depth:
  u32: 60
consensus_max_num_transactions_in_block:
  u64: 512
consensus_max_transaction_size_bytes:
  u64: 262144
consensus_max_transactions_in_block_bytes:
  u64: 524288
epoch_duration_ms:
  u64: 86400000
execution_version:
  u64: 2
max_checkpoint_size_bytes:
  u64: 31457280
max_transactions_per_checkpoint:
  u64: 20000
min_checkpoint_interval_ms:
  u64: 200
mysticeti_num_leaders_per_round:
  usize: 1
reward_slashing_rate_bps:
  u64: 5000
unit_fee:
  u64: 1000
